# dio-blog-fastapi

./: README.md  blog.db  pyproject.toml
src/: database.py  main.py  security.py
src/controllers/: post.py
src/models/: post.py
src/schemas/: post.py
src/services/: post.py
src/views/: post.py
tests/: conftest.py
tests/integration/: blog.db
tests/integration/controllers/post/: test_create_post.py  test_read_all.py
